--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Enterprise</title>
-    <link rel="stylesheet" href="../Enterprise/assets/css/reset.css">
-    <link rel="stylesheet" href="../Enterprise/assets/css/global.css">
+    <link rel="stylesheet" href="./Enterprise/assets/css/reset.css">
+    <link rel="stylesheet" href="./Enterprise/assets/css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,7 +17,7 @@
 <body>
     <header id="header">
         <div class="logo_content">
-            <img src="../Enterprise/assets/images/logo.svg" alt="">
+            <img src="./Enterprise/assets/images/logo.svg" alt="">
             <h1 class="logo_title">Open Enterprise</h1>
         </div>
         <nav class="nav_bar">
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <button class="ham_button">
-            <img src="../Enterprise/assets/icon/hamburger.svg" alt="">
+            <img src="./Enterprise/assets/icon/hamburger.svg" alt="">
         </button>
     </header>
     <main>
@@ -45,7 +45,7 @@
                 <button class="btn">Request early access</button>
             </div>
             <div>
-                <img class="info_img" src="../Enterprise/assets/images/about.svg" alt="">
+                <img class="info_img" src="./Enterprise/assets/images/about.svg" alt="">
             </div>
         </section>
 
@@ -64,7 +64,7 @@
             <div class="div_card">
                 <div class="card_info">
                     <div class="cards_intro">
-                        <img class="title_img" src="../Enterprise/assets/icon/modern.svg" alt="" />
+                        <img class="title_img" src="./Enterprise/assets/icon/modern.svg" alt="" />
                         <div class="title_info">
                             <h4 class="cards_title">Modern workforce</h4>
                             <p class="card_desc">
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="cards_intro">
-                        <img class="title_img" src="../Enterprise/assets/icon/meritocratic.svg" alt="" />
+                        <img class="title_img" src="./Enterprise/assets/icon/meritocratic.svg" alt="" />
                         <div class="title_info">
                             <h5 class="cards_title">Meritocratic by design</h5>
                             <p class="card_desc">
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                     <div class="cards_intro">
-                        <img class="title_img" src="../Enterprise/assets/icon/engineered.svg" alt="" />
+                        <img class="title_img" src="./Enterprise/assets/icon/engineered.svg" alt="" />
                         <div class="title_info">
                             <h6 class="cards_title">Engineered for resilience</h6>
                             <p class="card_desc">
@@ -98,7 +98,7 @@
         </section>
         <section class="feature">
             <div class="feature_info">
-                <img src="../Enterprise/assets/icon/feature.svg" alt="" />
+                <img src="./Enterprise/assets/icon/feature.svg" alt="" />
                 <strong class="feature_title">Kickstart an organization with your co-founders</strong>
                 <p class="feature_desc">
                     It’s the early days, you just had a long conversation with two
@@ -112,7 +112,7 @@
                     <strong class="members_title">Members</strong>
                     <div class="members">
                         <div class="members_info">
-                            <img class="members_img" src="../Enterprise/assets/icon/dillon.svg" alt="" />
+                            <img class="members_img" src="./Enterprise/assets/icon/dillon.svg" alt="" />
                             <ul class="members_nav">
                                 <li class="members_name">Dillon Kydd</li>
                                 <li class="member_share">100 SHARES</li>
@@ -120,7 +120,7 @@
                         </div>
 
                         <div class="members_info">
-                            <img class="members_img" src="../Enterprise/assets/icon/anna.svg" alt="" />
+                            <img class="members_img" src="./Enterprise/assets/icon/anna.svg" alt="" />
                             <ul class="members_nav">
                                 <li class="members_name">Anna Olsen</li>
                                 <li class="member_share">100 SHARES</li>
@@ -128,7 +128,7 @@
                         </div>
 
                         <div class="members_info">
-                            <img class="members_img" src="../Enterprise/assets/icon/kass.svg" alt="" />
+                            <img class="members_img" src="./Enterprise/assets/icon/kass.svg" alt="" />
                             <ul class="members_nav">
                                 <li class="members_name">Kas Moss</li>
                                 <li class="member_share">100 SHARES</li>
@@ -143,7 +143,7 @@
             <div class="proposal_widget">
                 <div class="proposal_top">
                     <div class="prop_member">
-                        <img class="members_img" src="../Enterprise/assets/icon/jassir.svg" alt="" />
+                        <img class="members_img" src="./Enterprise/assets/icon/jassir.svg" alt="" />
                         <div class="prop_member_desc">
                             <p class="member_name_prop">Jassir Jonis</p>
                             <p class="member_name_desc">Pre-seed angel investor</p>
@@ -173,7 +173,7 @@
             </div>
 
             <div class="feature_info">
-                <img src="../Enterprise/assets/icon/proposal.svg" alt="" />
+                <img src="./Enterprise/assets/icon/proposal.svg" alt="" />
                 <strong class="feature_title">Onboard users, investors and advisors as you grow</strong>
                 <p class="feature_desc">
                     You’ve bootstrapped and delivered an MVP, and some investors and
