--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="./Enterprise/assets/icon/hamburger.svg" alt="">
         </button>
     </header>
-    <main>
+    <main class="main_container">
         <section class="info">
             <div class="corusel">
                 <div class="info_content">
